--- a/Source/Rs.Exp.Jarvis.Client/NLog.Config
+++ b/Source/Rs.Exp.Jarvis.Client/NLog.Config
@@ -6,8 +6,10 @@
       throwExceptions="false"
       internalLogLevel="Warn" internalLogFile="logs\nlog-internal.log" >
   <targets async="true">
-    <target xsi:type="File" name="tracelog" fileName="${basedir}/logs/trace.log" layout="${longdate} ${uppercase:${level}} ${threadid} ${logger} ${message} ${exception:format=tostring}" />
-    <target xsi:type="Console" name="console" layout="${time} ${uppercase:${level}} ${threadid} ${logger} ${message} ${exception:format=tostring}" />
+    <target xsi:type="File" name="tracelog" fileName="${basedir}/logs/trace.log"
+      layout="${longdate} ${uppercase:${level:padding=-6:fixedLength=true}} ${threadid:padding=-2:fixedLength=true} ${logger} ${message} ${exception:format=tostring}"
+	  />
+    <target xsi:type="Console" name="console" layout="${time} ${uppercase:${level:padding=-6:fixedLength=true}} ${threadid:padding=-2:fixedLength=true} ${message} ${exception:format=tostring}" />
   </targets>
   <rules>
     <logger name="*" minlevel="Trace" writeTo="console" />
