--- a/Source/Rs.Exp.Jarvis.Core/Rs.Exp.Jarvis.Core.csproj
+++ b/Source/Rs.Exp.Jarvis.Core/Rs.Exp.Jarvis.Core.csproj
@@ -45,13 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Movement\ConsoleLocationReporter.cs" />
-    <Compile Include="Movement\LocationProvider.cs" />
+    <Compile Include="Movement\LocationTracker.cs" />
     <Compile Include="Movement\MoveStrategy.cs" />
     <Compile Include="Movement\WalkMoveStrategy.cs" />
     <Compile Include="Movement\GeodesyTools.cs" />
     <Compile Include="Navigation\Models\NavigationRoute.cs" />
-    <None Include="Navigation\Models\GeoLocation.cs.obsolete" />
     <Compile Include="Navigation\INavigator.cs" />
     <Compile Include="Movement\IMoveStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
