--- a/Source/Rs.Exp.Jarvis.Core/Rs.Exp.Jarvis.Core.csproj
+++ b/Source/Rs.Exp.Jarvis.Core/Rs.Exp.Jarvis.Core.csproj
@@ -31,12 +31,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.3.7\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.4.3.8\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Device" />
+    <Reference Include="System.Reactive.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reactive.Core.3.0.0\lib\net46\System.Reactive.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces, Version=3.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reactive.Interfaces.3.0.0\lib\net45\System.Reactive.Interfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Linq, Version=3.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reactive.Linq.3.0.0\lib\net46\System.Reactive.Linq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,13 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Movement\LocationTracker.cs" />
+    <Compile Include="Movement\TestLocationObserver.cs" />
+    <Compile Include="Movement\FuzzyLocationFeed.cs" />
     <Compile Include="Movement\MoveStrategy.cs" />
     <Compile Include="Movement\WalkMoveStrategy.cs" />
     <Compile Include="Movement\GeodesyTools.cs" />
     <Compile Include="Navigation\Models\NavigationRoute.cs" />
     <Compile Include="Navigation\INavigator.cs" />
     <Compile Include="Movement\IMoveStrategy.cs" />
+    <Compile Include="Poi\FakePoiProvider.cs" />
+    <Compile Include="Poi\IPoiProvider.cs" />
+    <Compile Include="Poi\Models\PointOfInterest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config" />
   </ItemGroup>
