--- a/Source/Rs.Exp.Jarvis.Core/packages.config
+++ b/Source/Rs.Exp.Jarvis.Core/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="4.3.7" targetFramework="net462" />
+  <package id="NLog" version="4.3.8" targetFramework="net462" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net462" />
 </packages>
