--- a/Source/Rs.Exp.Jarvis.Client/NLog.Config
+++ b/Source/Rs.Exp.Jarvis.Client/NLog.Config
@@ -12,6 +12,7 @@
     <target xsi:type="Console" name="console" layout="${time} ${uppercase:${level:padding=-6:fixedLength=true}} ${threadid:padding=-2:fixedLength=true} ${message} ${exception:format=tostring}" />
   </targets>
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console" />
+    <logger name="*" minlevel="Trace" writeTo="tracelog" />
   </rules>
 </nlog>
